# EasyUX

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml
easyux/: manage.py  settings.py  urls.py
easyux/core_ui/: apps.py  urls.py
easyux/core_ui/components/Button/: __init__.py  component.py  style.css
easyux/core_ui/engine/: loader.py  registry.json  registry.py
easyux/core_ui/engine/utils/: __init__.py  helpers.py
easyux/core_ui/static/coreui/: base.css  base.html  base.js
easyux/core_ui/templatetags/: compiler.py  coreui_tags.py  dls_parser.py  slots.py
easyux/coreui_cli/: commands.py
easyux/easyux/: asgi.py  wsgi.py
easyux/openui/: apps.py
easyux/sample/: settings.py  urls.py
openui/: urls.py  views.py
openui/components/: base_component.py
openui/components/Button/: component.py  template.html
openui/components/Card/: meta.json  script.js  template.html
openui/templates/: sample.html
openui/templatetags/: easyux_tags.py
src/coreui_django_component.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/coreui_django_component/coreui_django_component.egg-info/: PKG-INFO  SOURCES.txt
src/coreui_django_component/static/css/: components.css
src/coreui_django_component/templates/components/: button.html
src/coreui_django_component/templatetags/: viewcomponents.py
test/sample/core_ui/: urls.py  views.py
test/sample/core_ui/templatetags/: custom_tags.py
